# crabcache

./: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_SUMMARY.md  DOCKER_HUB_README.md  Dockerfile  LICENSE  Makefile  README.md  build.rs
benches/: cache_benchmark.rs
benchmark_results/: accurate_results_20251222_125044.json  accurate_results_20251222_125303.json  accurate_results_20251222_130015.json  baseline_low_20251221_220502.json  baseline_low_20251221_230035.json  baseline_low_20251221_230349.json  comparison_crabcache_vs_redis.md  comparison_report_20251221_230854.md  complete_benchmark_20251223_132112.json  connection_scaling_20251222_154721.json  final_comparison_report.md  final_demo_results_20251222_130205.json  high_concurrency_results_20251222_125353.json  high_concurrency_results_20251222_125356.json  high_concurrency_results_20251222_125359.json  high_concurrency_results_20251222_130023.json  max_throughput_optimized_20251222_145022.json  optimization_results_phase1.md  optimized_baseline_20251221_225009.json  optimized_performance_20251221_224535.json  optimized_performance_20251221_224844.json  outlier_analysis_20251222_141737.json  outlier_optimization_20251222_141921.json  p99_validation_20251222_135918.json  p99_validation_20251222_141013.json  performance_analysis.json  performance_analysis_optimized.json  performance_optimization_report.md  phase2_final_results.md  phase3_final_results.md  phase3_initial_results.md  phase7_distributed_results.json  pipeline_benchmark_20251223_141348.json  pipeline_results.json  realistic_redis_test_20251222_154930.json  redis_parity_roadmap.md  simple_redis_comparison_20251222_155151.json  ultra_low_latency_results_20251222_135703.json  ultra_low_latency_results_20251222_135720.json  ultra_low_latency_results_20251222_141010.json  (+1 more)
config/: default.toml  extreme-test.toml  minimal.toml
docker/: Dockerfile  Dockerfile.tester  Dockerfile.wrapper  README.md  requirements-wrapper.txt
docs/: API.md  AUTOMATION_COMPLETE_SETUP.md  CI_FIXES_SUMMARY.md  CONTRIBUTING.md  CrabCache-ExecutionPlan.md  DEPLOYMENT_SUMMARY_v0.0.2.md  (+36 more)
(+179 files in other folders)
