[package]
name = "crabcache"
version = "0.1.0"
edition = "2021"
authors = ["CrabCache Team"]
description = "Predictable, Memory-Efficient Cache Engine"
license = "MIT"
repository = "https://github.com/your-org/crabcache"
keywords = ["cache", "redis", "performance", "rust"]
categories = ["caching", "database"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
prometheus = "0.13"
ahash = "0.8"
bytes = "1.0"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.3"
crc32fast = "1.3"
async-trait = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
tempfile = "3.0"
tokio-test = "0.4"
