[package]
name = "crabcache"
version = "0.0.2"
edition = "2021"
authors = ["Roger Felipe <rogerfelipe.nsk@gmail.com>"]
description = "Ultra-high-performance cache server written in Rust - Educational project"
license = "MIT"
repository = "https://github.com/RogerFelipeNsk/crabcache"
keywords = ["cache", "redis", "performance", "rust", "educational"]
categories = ["caching", "database"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
prometheus = "0.13"
ahash = "0.8"
bytes = "1.0"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.3"
crc32fast = "1.3"
async-trait = "0.1"
futures = "0.3"
num_cpus = "1.0"
crossbeam-queue = "0.3"
memmap2 = "0.9"
tempfile = "3.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "5.5"
parking_lot = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
tempfile = "3.0"
tokio-test = "0.4"
